--- a/src/containers/Flat_master/flatMaster.css
+++ b/src/containers/Flat_master/flatMaster.css
@@ -5,6 +5,7 @@
     border: 1px solid #80bdff;
     border-radius: 20px;
     scroll-snap-type: initial;
+    background:#f3f3f3;
 
 }
 .flatMaster.input{
