--- a/src/containers/userRegistration/userRegistration.css
+++ b/src/containers/userRegistration/userRegistration.css
@@ -1,3 +1,11 @@
+.Registration_container{
+    margin: 0 auto;
+    width: 600px;
+    border: 1px solid #80bdff;
+    padding: 30px;
+    border-radius: 20px;
+}
+
 #headernav{max-height: 70px;opacity: 1;
    
 }
